--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=CineConnect
 spring.docker.compose.enabled=false
 # Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.url=jdbc:postgresql://localhost:5432/cineconnect
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=1379
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Mostra as queries SQL no console
 spring.jpa.show-sql=true
