--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "front-end",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "dependencies": {
+    "@mantine/carousel": "^8.3.4",
+    "@mantine/core": "^8.3.4",
+    "@mantine/dates": "^8.3.4",
+    "@mantine/form": "^8.3.4",
+    "@mantine/hooks": "^8.3.4",
+    "@mantine/spotlight": "^8.3.4",
+    "dayjs": "^1.11.18",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "tailwindcss": "^3.4.18",
+    "vite": "^7.1.7",
+    "@vitejs/plugin-react": "^4.0.0"
   }
+
 }
