--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,12 +6,14 @@
     "@mantine/form": "^8.3.4",
     "@mantine/hooks": "^8.3.4",
     "@mantine/spotlight": "^8.3.4",
+    "@tailwindcss/vite": "^4.1.14",
     "dayjs": "^1.11.18",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "tailwindcss": "^4.1.14"
   },
   "scripts": {
     "dev": "vite",
@@ -19,9 +21,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.18",
-    "vite": "^7.1.7",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^7.1.7"
   }
-
 }
