--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,7 @@
     "@mantine/form": "^8.3.4",
     "@mantine/hooks": "^8.3.4",
     "@mantine/spotlight": "^8.3.4",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
     "dayjs": "^1.11.18",
     "embla-carousel": "^8.6.0",
