--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,7 +17,7 @@
     "tailwindcss": "^4.1.14"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
