--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=CineConnect
 spring.docker.compose.enabled=false
 
+#Chaves geradas
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/cineconnect
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.show-sql=true
 spring.flyway.enabled=true
