--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,6 @@
     "@material-tailwind/react": "^2.1.10",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
-    "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -19,7 +18,7 @@
     "tailwindcss": "^4.1.14"
   },
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
