add img table blob and routes for upload and get images

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.docker.compose.enabled=false
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cineconnect
 spring.datasource.username=${DB_USERNAME}
