--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/cineconnect
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+file.upload-dir=./uploads
 spring.flyway.enabled=true
