--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.flyway.enabled=true
+
+# Stripe Configuration
+stripe.secret.key=${STRIPE_SECRET_KEY}
+
