--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,8 @@
     "@mantine/hooks": "^8.3.4",
     "@mantine/spotlight": "^8.3.4",
     "@material-tailwind/react": "^2.1.10",
-    "@mercadopago/sdk-react": "^1.0.6",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.13.1",
